@@ -1,5 +1,9 @@
 Release Notes
 
+* 5/6/2015
+  * changed JG to refresh job statistics before the innermost loop
+  * fixed getTasksTobeProcessed to take maxJobs into account more precisely
+
 * 5/5/2015
   * introduced maxFailure
   * using list_dataset_replicas of rucio API
